# avx_ros_package

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: receiver_node.h
launch/: mavros.launch  mavros_rs.launch  receiver.launch  receiver_mavros.launch  test.launch
launch/rovio/: mavros_rs.launch  rovio_Auterion.launch  rovio_rs_infra1_D435.launch
patches/: RovioNode.patch  incomplete_frame.patch  kalibr_rovio_config.patch
resources/: px4_config.yaml  receiver.rviz  shellconfig
resources/bags/: ADIS16477-2.yaml  Auterion_cam_kalibr.yaml
resources/kalibr_repo/: rovio_footer_px4.txt
resources/rovio/: Auterion.info  auterion.info
resources/rovio/cam_intrinsics/: auterion_cam_rovio.yaml
resources/to_kalibr/: rovio_footer_px4.txt
scripts/: installLibrealsensePatch.sh  install_rovio_packages.sh  move_files.sh  setup_ws.sh  ubuntu_dronecode_sdk.sh  ubuntu_ros_mavros.sh
src/: receiver_node.cpp
