<?xml version="1.0"?>
<package format="2">
  
  <name>avx_ros_package</name>
  <version>0.0.1</version>
  <description>The Aerovironment Nvidia Jetson TX2 and STM32F7 board test package</description>

  <maintainer email="daniele@auterion.com">DanielePettenuzzo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
